--- a/cluster.yaml
+++ b/cluster.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
   name: fluxDemo
-  region: us-west-2
+  region: eu-central-1
 iam:
   withOIDC: true
   serviceAccounts:
