--- a/apps/flask-hello/kustomization.yaml
+++ b/apps/flask-hello/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: flask-hello
 resources:
-  - ui
-  - flask-hello
+  - deployment.yaml
+  - service.yaml
