--- a/apps/flask-hello/namespace.yaml
+++ b/apps/flask-hello/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: flask-hello
+  name: flask-ns
   labels:
     app.kubernetes.io/created-by: eks-workshop
