--- a/apps/ui/kustomization.yaml
+++ b/apps/ui/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: ui
+namespace: ui-ns
 resources:
   - namespace.yaml
   - configMap.yaml
