--- a/apps/flask-app-helmrealease.yaml
+++ b/apps/flask-app-helmrealease.yaml
@@ -2,12 +2,12 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: flask-helm-app
-  namespace: default
+  namespace: flask-helm-ns
 spec:
   interval: 5m
   chart:
     spec:
-      chart: ./helm-charts/flask-helm-example    # relative path to your chart
+      chart: ../helm-charts/flask-helm-example    # relative path to your chart
       sourceRef:
         kind: GitRepository
         name: flux-system
