--- a/apps/flask-app-helmrealease.yaml
+++ b/apps/flask-app-helmrealease.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: flask-helm-ns
 spec:
   interval: 5m
+  targetNamespace: flask-helm-ns
   chart:
     spec:
       chart: ../helm-charts/flask-helm-example    # relative path to your chart
