--- a/apps/flask-app-helmrealease.yaml
+++ b/apps/flask-app-helmrealease.yaml
@@ -8,7 +8,7 @@ spec:
   targetNamespace: flask-helm-ns
   chart:
     spec:
-      chart: ../helm-charts/flask-helm-example    # relative path to your chart
+      chart: ./helm-charts/flask-helm-example    # relative path to your chart
       sourceRef:
         kind: GitRepository
         name: flux-system
